<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:padding="10dp">


    <!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--xmlns:tools="http://schemas.android.com/tools"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            <EditText
                android:id="@+id/Name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/name"
                android:paddingLeft="10dp"
                android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            <EditText
                android:id="@+id/PhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/phone"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            <EditText
                android:id="@+id/LicenseNumber"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/License"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            <EditText
                android:id="@+id/DriverLicense"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/DriverLicense"
                android:inputType="number"
                android:paddingLeft="10dp"
                android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            <EditText
                android:id="@+id/CareType"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/CareType"
                android:paddingLeft="10dp"
                android:textSize="20sp" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
            <EditText
                android:id="@+id/E_mail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_background"
                android:hint="@string/E_mail"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:textSize="20sp" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">
                <EditText
                    android:id="@+id/Password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:textSize="20sp"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/ConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_text_background"
                    android:hint="@string/ConfirmPassword"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:textSize="20sp" />


            </android.support.design.widget.TextInputLayout>



        </LinearLayout>


    <!--</ScrollView>-->
</RelativeLayout>
